--- a/Main.css
+++ b/Main.css
@@ -1,6 +1,11 @@
 /* px to % is 1px x 6.25  */
 /* Decrease size of menu page/text */ 
-
+/* Change color of website menu */
+/* Grid Layout for "job classes" */
+/* Fix Last couple of Px */
+/* .menu-image and .menu reviews */
+/* Fix Class Captials and lower cases */
+/* Change font of ribben on menu */
 
 h1 {
     font-size: 7vh;
