--- a/Main.css
+++ b/Main.css
@@ -13,7 +13,8 @@ h1 {
     font-style: oblique;
     font-family: Georgia, "Times New Roman", Times, serif;
     border-style: solid;
-    background-color: purple;
+    background-color:black;
+    color: white;
     justify-content: left;
     padding:1%;
     margin-top: 1%;
@@ -21,6 +22,7 @@ h1 {
     border-left: none;
 }
 h2 {
+    color: whitesmoke;
     text-align: center;
     font-size: 4vh;
     margin-right: 15%;
@@ -177,9 +179,7 @@ h2 {
     text-align: center;
   }
   .Menu-body {
-    background-image: url("background.png");
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: #04a3e3;
     margin: 0;
     padding: 0;
     border: 0;
@@ -205,32 +205,42 @@ h2 {
   .button1 {
     font-size: 3vh;
     color: white;
-    background-color: goldenrod;
+    background-color: #04739e;
     cursor: pointer;
     border-radius: 3vh;
     padding: 0.48vh 1.62vh 0.48vh 1.62vh;
     float: right;
-    margin-top: -7%;
+    margin-top: -6.5%;
     margin-right: 1%;
-    border-color:black;
+    border-color:white;
     border-width: 0.5vh;
   }
   .button2 {
     font-size: 3vh;
     color: white;
-    background-color:goldenrod;
+    background-color:#04739e;
     cursor: pointer;
     border-radius: 3vh;
     padding: 0.48vh 1.62vh 0.48vh 1.62vh;
     float: right;
-    margin-top: -7%;
+    margin-top: -6.5%;
     margin-right: 8%;
-    border-color:black;
+    border-color:white;
     border-width: 0.5vh;
+    
   }
 
   .Menu-image {
 
+  }
+  p1 {
+
+  }
+  p1 {
+    
+  }
+  p1 {
+    
   }
   img {
     max-width: 45%;
